# app/api/cron.go
@@ -1,14 +1,11 @@
 package api
 
 import (
-	"net/http"
-
 	"github.com/gin-gonic/gin"
 	"github.com/quangdangfit/gosdk/utils/logger"
 
-	"gomq/app/queue"
 	"gomq/app/services"
-	"gomq/utils"
+	"gomq/pkg/app"
 )
 
 const (
@@ -19,33 +16,49 @@ const (
 type Cron struct {
 	inService  services.InService
 	outService services.OutService
-	pub        queue.Publisher
 }
 
-func NewCron(service services.InService, publisher queue.Publisher) *Cron {
+func NewCron(inService services.InService, outService services.OutService) *Cron {
 	return &Cron{
-		inService: service,
-		pub:       publisher,
+		inService:  inService,
+		outService: outService,
 	}
 }
 
+// Resend godoc
+// @Tags Retry
+// @Summary api resend failed out messages
+// @Description api resend `failed` out messages
+// @Success 200 {object} app.Response
+// @Router /api/v1/cron/resend [post]
 func (cron *Cron) Resend(c *gin.Context) {
 	logger.Info("Start cronjob resend wait messages")
-
 	go cron.outService.CronResend(ResendOutMessageLimit)
-	c.JSON(http.StatusOK, utils.MsgResponse(utils.StatusOK, nil))
+	app.ResOK(c)
 }
 
+// Retry godoc
+// @Tags Retry
+// @Summary api retry `wait retry` in messages
+// @Description api resend `wait retry` in messages, message will change status to
+// failed when retry more than 3 times
+// @Success 200 {object} app.Response
+// @Router /api/v1/cron/retry [post]
 func (s *Cron) Retry(c *gin.Context) {
 	logger.Info("Start cronjob resend wait messages")
-
 	go s.inService.CronRetry(RetryInMessageLimit)
-	c.JSON(http.StatusOK, utils.MsgResponse(utils.StatusOK, nil))
+	app.ResOK(c)
 }
 
+// Retry Previous godoc
+// @Tags Retry
+// @Summary api retry `wait retry previous` in messages
+// @Description api resend `wait retry previous` in messages, just retry in messages
+// have previous message in status (cancel, success)
+// @Success 200 {object} app.Response
+// @Router /api/v1/cron/retry_previous [post]
 func (s *Cron) RetryPrevious(c *gin.Context) {
 	logger.Info("Start cronjob resend wait previous messages")
-
 	go s.inService.CronRetryPrevious(RetryInMessageLimit)
-	c.JSON(http.StatusOK, utils.MsgResponse(utils.StatusOK, nil))
+	app.ResOK(c)
 }
